--- a/index.html
+++ b/index.html
@@ -106,7 +106,34 @@
 				<div class="video">
 					<img src="img/test-img.png">
 				</div>	
-			</div> 
+			</div>
+			
+			<div class="feature">
+				<div class="video">
+					<img src="img/test-img.png">
+				</div>
+				<div class="description">
+					<h3>
+						Edit files on the fly
+					</h3>
+					<p>
+						You can also edit files and commit changes directly if you click on the code preview. 					</p>
+				</div>	
+					
+			</div>
+			
+			<div class="feature">
+				<div class="description">
+					<h3>
+						See a repo’s history 
+					</h3>
+					<p>
+						The connection-view can be swithced to a list-view that shows the repo's history in a linear axis.					</p>
+				</div>	
+				<div class="video">
+					<img src="img/test-img.png">
+				</div>	
+			</div>	
 	  </section>
 	  
 	  
