--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     />
     <title>GitRead</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta charset="utf-8" />
+	<meta charset="utf-8" />
+	<script src="https://player.vimeo.com/api/player.js"></script>
   </head>
   <body>
     <div class="container">
@@ -17,9 +18,10 @@
 		</header>
 
 	<section class="video-iframe">
-		<video width="100%" height="inherit" controls>
+		<!-- <video width="100%" height="inherit" controls>
 			<source src="video.mp4" type="video/mp4">
-		</video>
+		</video> -->
+		<div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/363150619?autoplay=1&loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
 	</section>
 
 	</section>	
@@ -109,6 +111,6 @@
 			</div> 
 	  </section>
 	  
-	  
+
   </body>
 </html>
