--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 						See a repo’s history 
 					</h3>
 					<p>
-						The connection-view can be swithced to a list-view that shows the repo's history in a linear axis.					</p>
+						The connection-view can be switched to a list-view that shows the repo's history in a linear axis.					</p>
 				</div>	
 				<div class="video">
 						<div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/363150598?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
