remove first git push joke and add twitter links
The fantastic git push thanks.md was in the text twice.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
         <p>
           Collaborative software development is a complex process. For that matter, the notion of overview of the interplay of the code files among each other is crucial. Gitread represents code files in abstract form and shows file calls among the code. Network structures are revealed and new members may gain deeper and quicke understanding of the code as a whole. Commit history is discoverable on hover and single code lines may be compared and reverted. Beneath the file more meta data is being displayed among the contributor. Usually, files
           are being grouped and put in hierarchy depending on the folder they are placed in. In Gitread path derived hierarchy is represented by a dash »/« and files of same kind and meta data grouped automatically.
-          git push thanks.md
         </p>
 	  </section>
 	  <section class="examples">
@@ -147,11 +146,11 @@
 		<p>
 			Gitread is a project by
 			<ul>
-				<li>@nadyakzmn</li>
-				<li>@yaronski</li>
-				<li>@agweiss</li>	
+				<li><a href="https://twitter.com/nadyakzmn">@nadyakzmn</a></li>
+				<li><a href="https://twitter.com/@yaronski">@yaronski</a></li>
+				<li><a href="https://twitter.com/@agweiss">@agweiss</a></li>	
 			</ul>
-			at FHP, 2019 Mindcontrolled by Prof. @borism
+			at FHP, 2019 Mindcontrolled by Prof. <a href="https://twitter.com/@borism">@borism</a>
 		</p>
 
 	  </section>
