rewrite intro with git

--- a/index.html
+++ b/index.html
@@ -27,7 +27,12 @@
 	</section>	
       <section class="intro text-width">
         <p>
-          Collaborative software development is a complex process. For that matter, the notion of overview of the interplay of the code files among each other is crucial. Gitread represents code files in abstract form and shows file calls among the code. Network structures are revealed and new members may gain deeper and quicke understanding of the code as a whole. Commit history is discoverable on hover and single code lines may be compared and reverted. Beneath the file more meta data is being displayed among the contributor. Usually, files
+          Collaborative software development is a complex process. 
+		  Established version control tools like Git help to track changes in all of a projects code files.
+
+		  However, Git at it's core is not based on any visual interface concept and little encouraging to get behind a project's structure, especially with regard to the relationship of the files.
+
+          Yet, the notion of overview of the interplay of code files among each other is crucial. Gitread represents code files in abstract form and shows file calls among the code. Network structures are revealed and new members may gain deeper and quicke understanding of the code as a whole. Commit history is discoverable on hover and single code lines may be compared and reverted. Beneath the file more meta data is being displayed among the contributor. Usually, files
           are being grouped and put in hierarchy depending on the folder they are placed in. In Gitread path derived hierarchy is represented by a dash »/« and files of same kind and meta data grouped automatically.
         </p>
 	  </section>
