embedd image, change font size, move video to bottom

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
 			<h1>“Only Gitread is a good read”</h1>
 		</header>
 
-	<section class="video-iframe">
-		<!-- <video width="100%" height="inherit" controls>
-			<source src="video.mp4" type="video/mp4">
-		</video> -->
-		<div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/363150619?autoplay=1&loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
-	</section>
+ <section class="imgintro">
 
-	</section>	
+ </section>
+
+
       <section class="intro text-width">
+      		<img src="Macbook Pro 13.1 ZOOM OUT@1x_noblue.png" alt="gitread" width="853" height="533">
+
         <p>
           Collaborative software development is a complex process. 
 		  Established version control tools like Git help to track changes in all of a projects code files.
@@ -145,6 +144,14 @@
 			</div>	
 	  </section>
 	  <section class="end">
+
+	  	<section class="video-iframe">
+		<!-- <video width="100%" height="inherit" controls>
+			<source src="video.mp4" type="video/mp4">
+		</video> -->
+		<div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/363150619?autoplay=1&loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;" frameborder="0" allow="autoplay; fullscreen" allowfullscreen></iframe></div>
+		</section>
+
 		<h2>
 			git push thank_you.md
 		</h2>
@@ -155,7 +162,7 @@
 				<li><a href="https://twitter.com/@yaronski">@yaronski</a></li>
 				<li><a href="https://twitter.com/@agweiss">@agweiss</a></li>	
 			</ul>
-			at FHP, 2019 Mindcontrolled by Prof. <a href="https://twitter.com/@borism">@borism</a>
+			at FHP, 2019, mindcontrolled by Prof. <a href="https://twitter.com/@borism">@borism</a>
 		</p>
 
 	  </section>
