fix img size and position. insert <br> in heading

--- a/index.html
+++ b/index.html
@@ -14,17 +14,14 @@
   <body>
     <div class="container">
       	<header>
-			<h1>“Only Gitread is a good read”</h1>
+			<h1>“Only <br> Gitread <br>is a <br>good read”</h1>
+			<img src="Macbook Pro 13.1 ZOOM OUT@1x_noblue.png" alt="gitread" width="1280" height="800">
+
 		</header>
-
- <section class="imgintro">
-
- </section>
 
 
       <section class="intro text-width">
-      		<img src="Macbook Pro 13.1 ZOOM OUT@1x_noblue.png" alt="gitread" width="853" height="533">
-
+      		
         <p>
           Collaborative software development is a complex process. 
 		  Established version control tools like Git help to track changes in all of a projects code files.
